--- a/q/274532.html
+++ b/q/274532.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>063</td><td>Wolfram Language Mathematica</td><td>240802T012857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274629#274629">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>084</td><td>R</td><td>240801T191945Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274621#274621">int 21h </a></td></tr>
-<tr d-ix="2"><td>nan</td><td></td><td>240801T081931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274611#274611">Sohang C</a></td></tr>
-<tr d-ix="3"><td>021</td><td>Kap</td><td>240801T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274613#274613">Elias M&</a></td></tr>
-<tr d-ix="4"><td>035</td><td>Ruby</td><td>240729T094539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274550#274550">G B</a></td></tr>
-<tr d-ix="5"><td>043</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
+<tr d-ix="0"><td>028</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
+<tr d-ix="1"><td>063</td><td>Wolfram Language Mathematica</td><td>240802T012857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274629#274629">138 Aspe</a></td></tr>
+<tr d-ix="2"><td>084</td><td>R</td><td>240801T191945Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274621#274621">int 21h </a></td></tr>
+<tr d-ix="3"><td>nan</td><td></td><td>240801T081931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274611#274611">Sohang C</a></td></tr>
+<tr d-ix="4"><td>021</td><td>Kap</td><td>240801T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274613#274613">Elias M&</a></td></tr>
+<tr d-ix="5"><td>035</td><td>Ruby</td><td>240729T094539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274550#274550">G B</a></td></tr>
 <tr d-ix="6"><td>011</td><td>M</td><td>240729T183151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274562#274562">caird co</a></td></tr>
 <tr d-ix="7"><td>021</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
 <tr d-ix="8"><td>027</td><td>Charcoal</td><td>240729T063814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274546#274546">Neil</a></td></tr>
@@ -42,7 +42,22 @@
 <tr d-ix="13"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="14"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 63 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 28 bytes</h1>
+<pre><code>n-&gt;(z=2)+sum(i=1,n,z/=2+1/i)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWe_J07TSqbI00tYtLczUybQ118nSq9G2NtA31MzUhSm6qpOUXaeQp2CoY6CgYWuooFBRl5pUABZQUdO2ARJpGnqYmVO2CBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A port of <a href="https://codegolf.stackexchange.com/a/274550/9288">@G B's Ruby answer</a>.</p>
+<p><span class="math-container">\$0\$</span>-indexed. Returns a rational number.</p>
+<hr />
+<h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 43 bytes</h1>
+<pre><code>n-&gt;prod(i=0,n,[i+2*!i,!!i*k=2*i+1;0,k])[,2]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGSNAVbhaWlJWm6Fje183TtCoryUzQybQ108nSiM7WNtBQzdRQVM7WybY20MrUNrQ10smM1o3WMYqFaVNLyizTygEYY6igYGegoFBRl5pUABZQUdO2ARJpGnqamJkTtggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><span class="math-container">\$1\$</span>-indexed. Returns a column vector of numerator and denominator.</p>
+<p>Using the fact that composition of linear fractional transformations (<span class="math-container">\$x\mapsto\frac{ax+b}{cx+d}\$</span>) corresponds to matrix multiplication.</p>
+<p>The <span class="math-container">\$n\$</span>-th output is <span class="math-container">\$\begin{bmatrix}2&amp;0\\0&amp;1\end{bmatrix}\begin{bmatrix}1&amp;3\\0&amp;3\end{bmatrix}\cdots\begin{bmatrix}n&amp;2n+1\\0&amp;2n+1\end{bmatrix}\begin{bmatrix}0\\1\end{bmatrix}\$</span>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 63 bytes</h1>
 <hr />
 <p>63 bytes, it can be golfed more.</p>
 <p>Golfed version. <a href="https://tio.run/##RY4xC8IwFIT3/IqjQtH6tE33OhVnB7eQoWqKhTaBNk4hv70@g@IbHsd3x3FT559m6vxw79YeDdazGx@qdZ5CqKmKFCqSMdK1u41GhWCptnuZcBKsLG2i1scUzFexLS7zYD24F7NZXqNf0LsZtpHwDnVV7MS3zRJ6ZXUkfKQkNqNGWUKgdSrVKMNBJbUmZDickBESqbX@4ZKZAN/f4MdOYEDgccjXNw" rel="nofollow noreferrer">Try it online!</a></p>
@@ -64,13 +79,13 @@ Table[{n, f[n]}, {n, 1, 20}] //
  Do[Print[ele[[1]], &quot; -&gt; &quot;, ele[[2]][[1]], &quot;/&quot;, ele[[2]][[2]]], {ele, #}] &amp;
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 84 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 84 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(n,m=0:n*2+1)cbind(Reduce(\(a,b)a*b+2*prod(1:((b-1)/2)),c(2,m),,,T)[-1],cumprod(m))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3Q2I08nRybQ2s8rSMtA01k5My81I0glJTSpNTNWI0EnWSNBO1krSNtAqK8lM0DK00NJJ0DTX1jTQ1dZI1jHRyNXV0dEI0o3UNY3WSS3PBinI1NSFmL03TMDSAshcsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>An anonymous function that takes an integer <span class="math-container">\$n\$</span> and outputs the first <span class="math-container">\$n+1\$</span> fractions of Rabinowitz-Wagon 𝜋-formula as two columns side by side - the numerator and the denominator, respectively.</p>
 </div>
-<div id="pu2" class="pu"><p><strike>## APL, 36 bytes</strike></p>
+<div id="pu3" class="pu"><p><strike>## APL, 36 bytes</strike></p>
 <p><strike>This is a function that takes <code>n</code> as input and outputs a pair of integers representing the numerator and denominator of the answer:</strike></p>
 <p><strike><code>{{⍺×⍵+⍵[2]0}/(⊂2 1),(⊢,1+2∘×)¨⍳⍵}</code></strike></p>
 <h2>APL, 32 bytes</h2>
@@ -78,23 +93,16 @@ Table[{n, f[n]}, {n, 1, 20}] //
 <p><a href="https://tio.run/##SyzI0U2pTMzJT////1Hf1EdtE6of9e46PP1R71ZtII42ijWo1dd41NVkpGCoqQNkLNIx1AbKrNA8tOJR72aglv//jQE" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
 <p>I'll try to shorten it by using more tacit style to remove named arguments - any suggestions are welcome 🙂.</p>
 </div>
-<div id="pu3" class="pu"><h2>Kap: 21 characters</h2>
+<div id="pu4" class="pu"><h2>Kap: 21 characters</h2>
 <pre><code>(1+)⍛×/⌽2,÷∘(1+2×)1+⍳
 </code></pre>
 <p>This function takes <code>n</code>, and returns a rational number. This takes advantage of the built-in support for rational numbers in Kap, where dividing integers always yields a rational. To convert the result to floating point, one can add <code>0.0</code> to the result.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>38</s> 35 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>38</s> 35 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{(z=2)+(1..n).sum{|x|z/=2+1r/x}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y6vWqPK1khTW8NQTy9PU6@4NLe6pqKmSt/WSNuwSL@itvZ/gYKpXklmbmqxXm5igYZamuZ/AA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 43 bytes</h1>
-<pre><code>n-&gt;prod(i=0,n,[i+2*!i,!!i*k=2*i+1;0,k])[,2]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGSNAVbhaWlJWm6Fje183TtCoryUzQybQ108nSiM7WNtBQzdRQVM7WybY20MrUNrQ10smM1o3WMYqFaVNLyizTygEYY6igYGegoFBRl5pUABZQUdO2ARJpGnqamJkTtggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p><span class="math-container">\$1\$</span>-indexed.</p>
-<p>Using the fact that composition of linear fractional transformations (<span class="math-container">\$x\mapsto\frac{ax+b}{cx+d}\$</span>) corresponds to matrix multiplication. The <span class="math-container">\$n\$</span>-th output is <span class="math-container">\$\begin{bmatrix}2&amp;0\\0&amp;1\end{bmatrix}\begin{bmatrix}1&amp;3\\0&amp;3\end{bmatrix}\cdots\begin{bmatrix}n&amp;2n+1\\0&amp;2n+1\end{bmatrix}\begin{bmatrix}0\\1\end{bmatrix}\$</span>.</p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/m" rel="nofollow noreferrer">M</a>, 11 bytes</h1>
 <pre><code>RḤ‘İ×R×\S‘Ḥ
