--- a/q/274448.html
+++ b/q/274448.html
@@ -26,15 +26,48 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>125</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
-<tr d-ix="1"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
-<tr d-ix="2"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
-<tr d-ix="3"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
-<tr d-ix="4"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
-<tr d-ix="5"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
-<tr d-ix="6"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
+<tr d-ix="0"><td>305</td><td>Wolfram Language Mathematica</td><td>240802T110622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274632#274632">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>125</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
+<tr d-ix="2"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
+<tr d-ix="3"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
+<tr d-ix="4"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
+<tr d-ix="5"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
+<tr d-ix="6"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
+<tr d-ix="7"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 125 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 305 bytes</h1>
+<p>A port of <a href="https://codegolf.stackexchange.com/a/274467/110802">@Dominic van Essen' R code</a> in Mathematica.</p>
+<p>305 bytes, it can be golfed more.</p>
+<hr />
+<p>Golfed version. <a href="https://tio.run/##bZBfa4MwFMXf9ylchdJqpI2Pcxlr@zAGLYxO2EO4dNc2VpnVobegiJ/dpX9kbemFJJfc3zmcZIcUqR1SvMZ2lijMZe8tyQJMvq0eeG0oyxWrVvAkFtlmnyhZNwzFLEsLwpQmeY6VHLMFlnKu0i1FryU7NxXYHDyU0vO6EYAor24qAFtU3lcUa2f@7LJA@BjofppletdoDPASA6vjzhYb8EigXmQvM0JScxWSDBgHJ7BO6tjmN4r3UD5O0srP90ou8NePcoUbaTqm22c1MmqAmY9i3Ac21ZMfCTq5oKv48lMlak1yielWda9FYBoxAY7iQ7UDy1cFGWssVGENH8LDjxl1A8Z1Day6sYanfjT6yOOUjA7mt7SGeUdfwmNmuAeBc6nQsMOZe@TvwccTLpzZ2fsG5v88P0nuxWj/AA" rel="nofollow noreferrer">Try it online!</a></p>
+<pre class="lang-mathematica prettyprint-override"><code>f[x_,y_]:=Module[{},a=ConstantArray[0,Max[Length@x,Length@y]+1];a[[;;Length@x]]=x;a[[;;Length@y]]+=y;While[1&lt;2,b=Table[Boole[a[[i]]&gt;i],{i,Length@a}];t=a;t=t+RotateLeft[b,1]-b*Table[i+1,{i,Length@a}];If[!AnyTrue[MapThread[#-#2&amp;,{a,t}],#!=0&amp;],Break[]];a=t];a[[;;Length[Select[Range[Length@a],a[[#]]!=0&amp;]]]]]
+</code></pre>
+<p>Ungolfed version. <a href="https://tio.run/##hZJBa8JAEIXv/opRQTSuaDw2WFChpaBQbKCHZWnHZNWlMZFkhYSQ324nibUxtW0O2R32fTMvb7NHvZN71MrB02nuSQx569EL1ui9Gy1hNdB1H9DRQajQVQ6P3xYq0gySYhVwN4EGLAP36Eme7jFeSH@rdwyQwZqBlvvDlMFG@eitZHT0dMZIDxchTGCJMS8LHgsG520iaDYAkmAe@JFGX0/DEBM@YhW6D2Yp49yy4NJFCMLiHwdJftCfQJKfvO4UWbbDoySnJLdxTfUsCOhNlCLpPSgylKqLKRRZMa78LoLwqirXPqwCjVou5EZzysAUMIC1UfZXueXbPZ82vAlTP8kt8SUe7F0o0eVtottj6BCE50AzctWG5gRG0KHtjHQfvMyrCKwQWUVdSR7ym6ol8iI96Wi@Qn8r@cUQ9SRVmxI4zxCi3kw0Gl3DlpEGByMZGb36f5LSRaeZgOuna6SZ0Sv3w@FzqHwNN0mzjhJpfqG/kvRvjHN6UMWJHJhsXMD/ksUqKjPZeepfpPkNmyV/y@3p9Ak" rel="nofollow noreferrer">Try it online!</a></p>
+<pre class="lang-mathematica prettyprint-override"><code>Clear[&quot;Global`*&quot;];
+addFactoriadic[x_List, y_List] := 
+ Module[{maxLength, a, b, tempA, finalResult}, 
+  maxLength = Max[Length[x], Length[y]];
+  a = ConstantArray[0, maxLength + 1];
+  a[[;; Length[x]]] = x;
+  a[[;; Length[y]]] += y;
+  While[True, b = Table[Boole[a[[i]] &gt; i], {i, Length[a]}];
+   tempA = a;
+   tempA = tempA + RotateLeft[b, 1] - b*Table[i + 1, {i, Length[a]}];
+   If[! AnyTrue[MapThread[# - #2 &amp;, {a, tempA}], # != 0 &amp;], Break[]];
+   a = tempA;];
+  finalResult = 
+   a[[;; Length[Select[Range[Length[a]], a[[#]] != 0 &amp;]]]];
+  finalResult]
+
+(*Test cases*)
+addFactoriadic[{}, {}]               (*{}*)      //Print 
+addFactoriadic[{}, {1}]              (*{1}*)     //Print 
+addFactoriadic[{0, 2}, {-1}]         (*{-1,2}*)  //Print 
+addFactoriadic[{0, 2}, {0, 2}]       (*{1,1}*)   //Print 
+addFactoriadic[{0, 1, 2}, {0, 1, 2}] (*{1}*)     //Print 
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 125 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(v,w,`^`=c,y=w^0,s=seq){a=(!s(x&lt;-v^0)-(e=s(x+y)))*x+y*!s(y)-e
 while(any(a-(a=a-(b=(a&gt;e))*e-b+b[-1]^0)))1
 a[s(l=max(e*!!a))]}
@@ -55,7 +88,7 @@ a[s(l=max(e*!!a))]}
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(a,b)=&gt;{b.map((x,i)=&gt;a[i]=(a[i]?a[i]:0)+x);c=0;for(i=(y=a.length)-1;i&gt;0;i--){d=(e=a[i]+c)%(z=i+2);c=e/z|0;a[i]=d};y?a[0]+=c:0;while(a[a.length-1]==0)a.pop();return a}
 </code></pre>
@@ -89,7 +122,7 @@ return a //return result
 }
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>+dṛ¦J‘$F+2/ƲÐLœr0
 </code></pre>
 <p>A dyadic Link that accepts factoriadic fractions as lists of integers on each side and yields their sum.</p>
@@ -113,7 +146,7 @@ return a //return result
               œr0 - trim trailing zeros
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 18 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 18 bytes</h1>
 <pre><code>+:#ᵑ{CU$x3+þç++;ž¿
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6Fju0rZQfbp1Y7RyqUmGsfXjf4eXa2tZH9x3av6Q4KbkYqmjBTePoWIXoWC4QaQikDHSMgCxdBBNEgtiGUB6IhugFAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -138,7 +171,7 @@ return a //return result
 </code></pre>
 <p>The last step <code>;ž¿</code> is nondeterministic, so we need to add the <code>-1</code> flag to return only the first result, where all trailing 0s are removed.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
 <pre><code>Ｆ⁻ＬηＬθ⊞θ⁰≔⁰ζＦ⮌Ｅηκ«≧⁺⁺§θι⊟ηζ§≔θι⎇ι﹪ζ⁺²ιζ≧÷⁺²ιζ»Ｗ∧θ¬↨θ⁰⊟θＩθ
 </code></pre>
 <p><a href="https://tio.run/##XVBNawMhFDxnf8U7PsFCmmtP2/YS6IYl9BZykKxdpaKJuts2Ib/dPjWU0IvMwHy88aCEPzhhUvpwHrDTdgr4Ju0YFSrG4QZPjDHop0CIw5I9NW0IerS45HAmVrxbOUsfJHbiiIrDZ7ZcmgXRKt7qUUXszRQ45BfbuLaD/M6Rmqp6Rz7GauKieu4lHN6lt8L/IMHODZNxeL5FrXJEsWbvv8q1ja961oO8F9eaa/OltJGArR1yycZFfBY0oswso722dDXddsrZlb6IEAtPabejP3jksNpz@IP79DCbXw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -168,14 +201,14 @@ return a //return result
 <p>Output the final result.</p>
 <p>Bonus 136-byte <a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a> solution: <a href="https://tio.run/##RY29DgIxDIN3P0WHgpK2VJey8jPyEL2cDgkGFgbEeO9e0i4ssT/Lij/P7@t9bzu6rU2RnGKuyaFifkT4gAVVjeNqN5METo5y6MBGyTG8@KNx9QU9hnWtcz2diRJvmSMbHMpFOIrQlQovDLGfvTPXzbEE@LyH7U4aFdpa36w6pquYTsmV7ocOlH8y7A8" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Does not work with negative numbers.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=c=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b+=c+a,c=b&gt;i,b+=c*~i)?[b,...k]:k:A
 </code></pre>
 <p><a href="https://tio.run/##dc1BCsMgEAXQfW/RndaJxCxTJsFcQ1yojcUaYmhKV9Krp0nbZQrDwP@PYW7maWZ3D9OjGNOlXzyuQ5TBEjjnUoOy6L6h0xAoNhEl63I22baeSOggMJFzRY9YEMvQMQMObRNgC6dXoK2y23nUdazlcj64NM5p6PmQrsQTtb7QlO60YqcuoVql@E/b3jPxU/Hx5Q0" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><code>==-</code> if former is <code>[]</code> and latter is 0. Former is never negative and latter, including <code>-</code>, is never positive</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu7" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Assumes index origin 0.</p>
 <pre><code>{x↓⍨-⊥⍨0=x←(⊢⊤⊥∘m)(⊢+2××)⍳≢m←+⌿↑⍺⍵}
 </code></pre>
